--- a/Backend/employeemanagement springboot/pom.xml
+++ b/Backend/employeemanagement springboot/pom.xml
@@ -51,8 +51,8 @@
             <version>1.6.4</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
