--- a/Backend/employeemanagement springboot/src/main/resources/application.properties
+++ b/Backend/employeemanagement springboot/src/main/resources/application.properties
@@ -6,15 +6,14 @@ server.servlet.context-path=/api
 
 server.port=8080
 
-# H2 Database Configuracdtion
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=manbo
-spring.datasource.password=manbo
+# sql Database Configuracdtion
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Cinder1014
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Enable H2 Console
 spring.h2.console.enabled=true
