Remove hardcoded and change to spring security login

--- a/Backend/employeemanagement springboot/src/main/resources/application.properties
+++ b/Backend/employeemanagement springboot/src/main/resources/application.properties
@@ -13,8 +13,10 @@ spring.datasource.password=Cinder1014
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+logging.level.org.springframework.security=DEBUG
